--- a/.gitignore
+++ b/.gitignore
@@ -549,3 +549,11 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
+# ##############################################################################
+# DC-KAFKA
+# ##############################################################################
+
+/.env
+/kafka.env
+/zookeeper.env
