Fix image name in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - zookeeper
     env_file:
       - kafka.env
-    image: buildingsalive/kafka:${KAFKA_VERSION}
+    image: grammyjiang/kafka:${KAFKA_VERSION}
     networks:
       - nw-kafka
     ports:
